ready for release

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Authors@R: c(person("Youjin", "Lee", role = c("aut", "cre"),
 	   	        email="eogburn@jhu.edu"))
 Maintainer: Youjin Lee <ylee160@jhu.edu>
 Imports: stats, igraph, igraphdata, MASS, mvrtn
-Suggests: knitr
+Suggests: knitr,
+    testthat
 Description: When network dependence is present, that is when social relations can engender dependence in the outcome of in- terest, treating such observations as independent results in invalid, anti-conservative statistical inference. We propose a test of independence among observations sampled from a single network <arXiv:1710.03296>.
 License: GPL (>=3) | file LICENSE
 Encoding: UTF-8
